--- a/src/components/MathQuiz.astro
+++ b/src/components/MathQuiz.astro
@@ -1,5 +1,5 @@
 ---
-// MathQuiz.astro
+// MathQuiz.astro - Version 2 with space and exponent keys
 import "../styles/math-quiz.css";
 ---
 
@@ -37,6 +37,8 @@ import "../styles/math-quiz.css";
       <button type="button" id="enter" class="enter">↵</button>
       <button type="button" id="decimal-btn" style="display: none;">.</button>
       <button type="button" id="fraction-btn" style="display: none;">/</button>
+      <button type="button" id="space-btn" style="display: none;">␣</button>
+      <button type="button" id="exponent-btn" style="display: none;">^</button>
     </div>
   </div>
 
