--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -35,6 +35,13 @@ const socialUrl = (Astro.site?.href ?? "https://goude.se/") + "/favicon.svg";
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={socialUrl} />
 
+<!-- Font-awesome Icons -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+  referrerpolicy="no-referrer"
+/>
+
 <!-- Syntax Highlighting -->
 <link
   href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css"
