--- a/src/pages/cop.astro
+++ b/src/pages/cop.astro
@@ -14,10 +14,6 @@ const permalink = `${Astro.site!.href}cop`;
 >
   <section>
     <h1>cop</h1>
-    <p class="lede">
-      Simple cloud clipboard backed by a tiny Worker. Intended only for
-      non-sensitive, public data.
-    </p>
   </section>
 
   <section>
@@ -29,9 +25,7 @@ const permalink = `${Astro.site!.href}cop`;
     <style>
       .cop-container {
         margin-top: 1rem;
-        max-width: 48rem;
-        margin-left: auto;
-        margin-right: auto;
+        max-width: 30rem;
         font-family:
           system-ui,
           -apple-system,
@@ -50,20 +44,21 @@ const permalink = `${Astro.site!.href}cop`;
         margin-bottom: 0.75rem;
       }
 
+      .cop-url-link {
+        font-size: 0.9rem;
+        word-break: break-all;
+        margin-top: 0.5rem;
+        display: inline-block;
+      }
+
       .cop-qr-wrapper canvas {
+        border: 1px solid;
         display: block;
         margin-top: 0.5rem;
         width: 400px;
         height: 400px;
         max-width: 100%;
         max-height: 100%;
-      }
-
-      .cop-url-link {
-        font-size: 0.9rem;
-        word-break: break-all;
-        margin-top: 0.5rem;
-        display: inline-block;
       }
 
       .cop-input {
@@ -209,8 +204,8 @@ const permalink = `${Astro.site!.href}cop`;
             return;
           }
           window.QRCode.toCanvas(qrCanvas, value, {
-            margin: 2,
-            width: 400,
+            margin: 0,
+            width: 300,
           });
         }
 
