minor edit/housekeeping activity

--- a/src/pages/egghunt.astro
+++ b/src/pages/egghunt.astro
@@ -14,5 +14,6 @@ const permalink = `${Astro.site!.href}egghunt`;
 >
   <section>
     <h1>egghunt</h1>
+    <p>lbh ner rneyl ohg fgnl gharq sbe fbzr chmmyr fbyivat puevfgznf sha</p>
   </section>
 </BaseLayout>
