--- a/src/pages/egghunt.astro
+++ b/src/pages/egghunt.astro
@@ -14,6 +14,9 @@ const permalink = `${Astro.site!.href}egghunt`;
 >
   <section>
     <h1>egghunt</h1>
-    <p>lbh ner rneyl ohg fgnl gharq sbe fbzr chmmyr fbyivat puevfgznf sha</p>
+    <p>
+      lbh ner gur svefg gb svaq guvf cvat rttuhag ng tbhqr qbg fr jvgu lbhe
+      pubfra yrnqreobneq nyvnf gb npgvingr gur arkg fgntr bs gur gernfher uhag
+    </p>
   </section>
 </BaseLayout>
